--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: Travelog
 author: Your name
-author_link: https://whatever.you/like
+author_link: http://hybrid.pub/codesign
 author_description: A few words to describe you & your face
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
@@ -16,7 +16,7 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://hybrid.pub/codesign" # the base hostname & protocol for your site
 
 # Picturefill
 # A responsive image polyfill: http://scottjehl.github.io/picturefill/
