--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Travelog
-author: Your name
+title: "Co-Design: Collaborative Pedagogy in DH and Building Inclusive Digital Ethics"
+author: Anita Say Chan, et al.
 author_link: http://hybrid.pub/codesign
 author_description: A few words to describe you & your face
 email: your-email@domain.com
