--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: "Co-Design: Collaborative Pedagogy in DH and Building Inclusive Digital E
 author: Anita Say Chan, et al.
 author_link: http://hybrid.pub/codesign
 author_description: A few words to describe you & your face
-email: your-email@domain.com
+email: robin@hybridpedagogy.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
