initial yaml setup

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ title: "Co-Design: Collaborative Pedagogy in DH and Building Inclusive Digital E
 author: Anita Say Chan, ed.
 author_link: http://hybrid.pub/codesign
 author_description: > 
-  "Mike Atienza, Gabe McCoy, elizaBeth Simpson, Fabian Prieto-Ñañez, Hong-An Wu, 
-  Jessica Landau, Edward Prutzer, Svetlozara Stoytcheva, Melissa Seifert" 
+  Mike Atienza, Gabe McCoy, elizaBeth Simpson, Fabian Prieto-Ñañez, Hong-An Wu, 
+  Jessica Landau, Edward Prutzer, Svetlozara Stoytcheva, Melissa Seifert 
 email: robin@hybridpedagogy.com
 description: > # this means to ignore newlines until "baseurl:"
   "Exploring the dynamically discursive nature of syllabi as boundary objects — the 
